--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <h1>Zathura</h1>
-<p>The best Visual Debugger for assembly (all major architectures), cross platform, FOSS and doesn't suck - Under Development</p>
+<p>The best visual debugger for assembly (all major architectures), cross platform, FOSS and doesn't suck - Under Development</p>
 <a href="https://youtu.be/J9l-TjzaAZw"> Video demo </a>
+<p>Updates on my X account <a href="x.com/rcx86">here</a></p>
+<p>Based on <a href="https://www.unicorn-engine.org">Unicorn Engine</a>, <a href="https://www.capstone-engine.org/">Capstone Engine</a> and <a href="https://keystone-engine.org">Keystone Engine</a></p>
 </html>
